# VotoChain-Backend

./: .env  Cargo.toml  Dockerfile  README.md  compose.yaml
migrations/: 20231201120000_initial_schema.sql
src/: config.rs  db.rs  error.rs  main.rs  router.rs
src/dto/: student.rs
src/handlers/: mod.rs  student_handler.rs
src/models/: student.rs
src/repository/: student_repository.rs
src/routers/: mod.rs
